# Fast-SCNN-libtorch

./: CMakeLists.txt  README.md  inference.cpp
include/: FastScnn.h  FastScnn_v3.h
src/: FastScnn_v1.cc  FastScnn_v2.cc  FastScnn_v3.cc
